# serializer version: 1
# name: test_feature_publish_mode_golden
  '''
  steps:
    - id: worktree
      activity: create-worktree
      input:
        agentId: "claude-agent"
        branch: "feature/{{params.slug}}"
    - id: setup
      activity: setup
      input:
        agentId: "claude-agent"
        setup:
          - cmd: "mkdir -p ~/.claude/skills && cp -r $H_SKILLS_DIR/. ~/.claude/skills/"
          - cmd: "cp $AGENT_APP_DIR/steering/h-lab-runtime.md ~/.claude/CLAUDE.md"
    - id: plan
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        model: "claude-sonnet-4-6"
        permissionMode: plan
        task: |-
          You are in a git worktree of the target repository, on branch feature/{{params.slug}}.
  
          First check for a persisted plan from a prior run: if plan-feature-{{params.slug}}.md
          exists in the worktree root, read it — if it still matches the spec and the code,
          reuse it as your plan instead of re-investigating.
  
          Otherwise investigate the feature request under ===FEATURE SPEC=== below: explore the
          relevant code and produce an implementation plan. Do NOT write code or modify any
          files. If the feature already appears implemented, say so in the plan.
          End your response with the plan under the exact marker ===IMPLEMENTATION PLAN===.
  
          ===FEATURE SPEC===
          {{params.spec}}
    - id: implement
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        model: "claude-haiku-4-5"
        task: |-
          You are in a git worktree of the target repository, on branch feature/{{params.slug}}.
  
          First persist the plan you were handed under ===IMPLEMENTATION PLAN=== (the
          shared-context handoff, so a re-run or another session can pick it up — the planning
          agent runs read-only and cannot write it itself):
          1. Write it to plan-feature-{{params.slug}}.md in the worktree root.
          2. Call the dapr MCP tool actor_state_set with actorId 'feature-{{params.slug}}' and key
             'plan', value the plan text — durable in the state store, inspectable from any
             session via actor_state_get.
          If either persistence step fails (e.g. the dapr MCP is unreachable), do NOT fail the
          run — but you MUST say so explicitly in your final output, so the degradation is
          visible instead of silent.
  
          Then implement the feature described under ===FEATURE SPEC=== below, following the
          plan. Leave the result as uncommitted working-tree changes — do not commit or push.
          If the feature already appears implemented, make no changes and say so.
  
          ===FEATURE SPEC===
          {{params.spec}}
  
          ===IMPLEMENTATION PLAN===
          {{plan.output}}
  
  '''
# ---
# name: test_feature_wire_json_golden
  '{"instanceId": "feature-hostile-fixture", "steps": [{"id": "worktree", "activity": "create-worktree", "input": {"agentId": "claude-agent", "branch": "feature/hostile-fixture"}}, {"id": "setup", "activity": "setup", "input": {"agentId": "claude-agent", "setup": [{"cmd": "mkdir -p ~/.claude/skills && cp -r $H_SKILLS_DIR/. ~/.claude/skills/"}, {"cmd": "cp $AGENT_APP_DIR/steering/h-lab-runtime.md ~/.claude/CLAUDE.md"}]}}, {"id": "plan", "activity": "run-claude", "input": {"cwd": "{{worktree.worktreePath}}", "model": "claude-sonnet-4-6", "permissionMode": "plan", "task": "You are in a git worktree of the target repository, on branch feature/hostile-fixture.\\n\\nFirst check for a persisted plan from a prior run: if plan-feature-hostile-fixture.md\\nexists in the worktree root, read it — if it still matches the spec and the code,\\nreuse it as your plan instead of re-investigating.\\n\\nOtherwise investigate the feature request under ===FEATURE SPEC=== below: explore the\\nrelevant code and produce an implementation plan. Do NOT write code or modify any\\nfiles. If the feature already appears implemented, say so in the plan.\\nEnd your response with the plan under the exact marker ===IMPLEMENTATION PLAN===.\\n\\n===FEATURE SPEC===\\n# Hostile-content fixture\\n\\nThis spec deliberately carries every token class that must survive rendering untouched.\\nIt is the committed proof of the delimiter-coexistence story — if any layer (helm, YAML,\\nthe JSON wire step) mangles one of these, the golden snapshot diff catches it.\\n\\n- agent-side shell vars: $AGENT_APP_DIR and ${H_SKILLS_DIR}\\n- envsubst-style tokens: ${VARS} and ${NOT_A_REAL_VAR}\\n- engine-style tokens: {{step.field}} and {\\"$ref\\": \\"step.field\\"}\\n- \\"double quotes\\", \'single quotes\', back\\\\slashes, a lone $ sign\\n- markdown: `inline code`, **bold**, a [link](https://example.invalid)\\n\\n  an indented block\\n    a deeper one\\n\\nTrailing punctuation and unicode: café, emoji ✅, em-dash —"}}, {"id": "implement", "activity": "run-claude", "input": {"cwd": "{{worktree.worktreePath}}", "model": "claude-haiku-4-5", "task": "You are in a git worktree of the target repository, on branch feature/hostile-fixture.\\n\\nFirst persist the plan you were handed under ===IMPLEMENTATION PLAN=== (the\\nshared-context handoff, so a re-run or another session can pick it up — the planning\\nagent runs read-only and cannot write it itself):\\n1. Write it to plan-feature-hostile-fixture.md in the worktree root.\\n2. Call the dapr MCP tool actor_state_set with actorId \'feature-hostile-fixture\' and key\\n   \'plan\', value the plan text — durable in the state store, inspectable from any\\n   session via actor_state_get.\\nIf either persistence step fails (e.g. the dapr MCP is unreachable), do NOT fail the\\nrun — but you MUST say so explicitly in your final output, so the degradation is\\nvisible instead of silent.\\n\\nThen implement the feature described under ===FEATURE SPEC=== below, following the\\nplan. Leave the result as uncommitted working-tree changes — do not commit or push.\\nIf the feature already appears implemented, make no changes and say so.\\n\\n===FEATURE SPEC===\\n# Hostile-content fixture\\n\\nThis spec deliberately carries every token class that must survive rendering untouched.\\nIt is the committed proof of the delimiter-coexistence story — if any layer (helm, YAML,\\nthe JSON wire step) mangles one of these, the golden snapshot diff catches it.\\n\\n- agent-side shell vars: $AGENT_APP_DIR and ${H_SKILLS_DIR}\\n- envsubst-style tokens: ${VARS} and ${NOT_A_REAL_VAR}\\n- engine-style tokens: {{step.field}} and {\\"$ref\\": \\"step.field\\"}\\n- \\"double quotes\\", \'single quotes\', back\\\\slashes, a lone $ sign\\n- markdown: `inline code`, **bold**, a [link](https://example.invalid)\\n\\n  an indented block\\n    a deeper one\\n\\nTrailing punctuation and unicode: café, emoji ✅, em-dash —\\n\\n\\n===IMPLEMENTATION PLAN===\\n{{plan.output}}"}}]}'
# ---
# name: test_feature_with_verify_golden
  '''
  instanceId: "feature-hostile-fixture"
  steps:
    - id: worktree
      activity: create-worktree
      input:
        agentId: "claude-agent"
        branch: "feature/hostile-fixture"
    - id: setup
      activity: setup
      input:
        agentId: "claude-agent"
        setup:
          - cmd: "mkdir -p ~/.claude/skills && cp -r $H_SKILLS_DIR/. ~/.claude/skills/"
          - cmd: "cp $AGENT_APP_DIR/steering/h-lab-runtime.md ~/.claude/CLAUDE.md"
    - id: plan
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        model: "claude-sonnet-4-6"
        permissionMode: plan
        task: |-
          You are in a git worktree of the target repository, on branch feature/hostile-fixture.
  
          First check for a persisted plan from a prior run: if plan-feature-hostile-fixture.md
          exists in the worktree root, read it — if it still matches the spec and the code,
          reuse it as your plan instead of re-investigating.
  
          Otherwise investigate the feature request under ===FEATURE SPEC=== below: explore the
          relevant code and produce an implementation plan. Do NOT write code or modify any
          files. If the feature already appears implemented, say so in the plan.
          End your response with the plan under the exact marker ===IMPLEMENTATION PLAN===.
  
          ===FEATURE SPEC===
          # Hostile-content fixture
          
          This spec deliberately carries every token class that must survive rendering untouched.
          It is the committed proof of the delimiter-coexistence story — if any layer (helm, YAML,
          the JSON wire step) mangles one of these, the golden snapshot diff catches it.
          
          - agent-side shell vars: $AGENT_APP_DIR and ${H_SKILLS_DIR}
          - envsubst-style tokens: ${VARS} and ${NOT_A_REAL_VAR}
          - engine-style tokens: {{step.field}} and {"$ref": "step.field"}
          - "double quotes", 'single quotes', back\slashes, a lone $ sign
          - markdown: `inline code`, **bold**, a [link](https://example.invalid)
          
            an indented block
              a deeper one
          
          Trailing punctuation and unicode: café, emoji ✅, em-dash —
          
    - id: implement
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        model: "claude-haiku-4-5"
        task: |-
          You are in a git worktree of the target repository, on branch feature/hostile-fixture.
  
          First persist the plan you were handed under ===IMPLEMENTATION PLAN=== (the
          shared-context handoff, so a re-run or another session can pick it up — the planning
          agent runs read-only and cannot write it itself):
          1. Write it to plan-feature-hostile-fixture.md in the worktree root.
          2. Call the dapr MCP tool actor_state_set with actorId 'feature-hostile-fixture' and key
             'plan', value the plan text — durable in the state store, inspectable from any
             session via actor_state_get.
          If either persistence step fails (e.g. the dapr MCP is unreachable), do NOT fail the
          run — but you MUST say so explicitly in your final output, so the degradation is
          visible instead of silent.
  
          Then implement the feature described under ===FEATURE SPEC=== below, following the
          plan. Leave the result as uncommitted working-tree changes — do not commit or push.
          If the feature already appears implemented, make no changes and say so.
  
          ===FEATURE SPEC===
          # Hostile-content fixture
          
          This spec deliberately carries every token class that must survive rendering untouched.
          It is the committed proof of the delimiter-coexistence story — if any layer (helm, YAML,
          the JSON wire step) mangles one of these, the golden snapshot diff catches it.
          
          - agent-side shell vars: $AGENT_APP_DIR and ${H_SKILLS_DIR}
          - envsubst-style tokens: ${VARS} and ${NOT_A_REAL_VAR}
          - engine-style tokens: {{step.field}} and {"$ref": "step.field"}
          - "double quotes", 'single quotes', back\slashes, a lone $ sign
          - markdown: `inline code`, **bold**, a [link](https://example.invalid)
          
            an indented block
              a deeper one
          
          Trailing punctuation and unicode: café, emoji ✅, em-dash —
          
  
          ===IMPLEMENTATION PLAN===
          {{plan.output}}
    - id: verify
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        task: |-
          You are in a git worktree of the target repository, on branch feature/hostile-fixture.
          A change was just implemented (summary under ===IMPLEMENTED=== below). Verify it:
          run exactly this command in the worktree root:
  
              bun run lint
  
          If it fails, diagnose the failure, fix the code, and re-run the command. Repeat
          until it passes or you have made 3 fix attempts. Do not weaken the check (no
          skipping tests, no suppressing errors); do not commit or push.
          End your response with the exact marker ===VERIFY=== on its own line, then PASS or
          FAIL on the next line, then a short summary of the final command output as evidence.
  
          ===IMPLEMENTED===
          {{implement.output}}
  
  '''
# ---
# name: test_feature_yaml_golden
  '''
  instanceId: "feature-hostile-fixture"
  steps:
    - id: worktree
      activity: create-worktree
      input:
        agentId: "claude-agent"
        branch: "feature/hostile-fixture"
    - id: setup
      activity: setup
      input:
        agentId: "claude-agent"
        setup:
          - cmd: "mkdir -p ~/.claude/skills && cp -r $H_SKILLS_DIR/. ~/.claude/skills/"
          - cmd: "cp $AGENT_APP_DIR/steering/h-lab-runtime.md ~/.claude/CLAUDE.md"
    - id: plan
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        model: "claude-sonnet-4-6"
        permissionMode: plan
        task: |-
          You are in a git worktree of the target repository, on branch feature/hostile-fixture.
  
          First check for a persisted plan from a prior run: if plan-feature-hostile-fixture.md
          exists in the worktree root, read it — if it still matches the spec and the code,
          reuse it as your plan instead of re-investigating.
  
          Otherwise investigate the feature request under ===FEATURE SPEC=== below: explore the
          relevant code and produce an implementation plan. Do NOT write code or modify any
          files. If the feature already appears implemented, say so in the plan.
          End your response with the plan under the exact marker ===IMPLEMENTATION PLAN===.
  
          ===FEATURE SPEC===
          # Hostile-content fixture
          
          This spec deliberately carries every token class that must survive rendering untouched.
          It is the committed proof of the delimiter-coexistence story — if any layer (helm, YAML,
          the JSON wire step) mangles one of these, the golden snapshot diff catches it.
          
          - agent-side shell vars: $AGENT_APP_DIR and ${H_SKILLS_DIR}
          - envsubst-style tokens: ${VARS} and ${NOT_A_REAL_VAR}
          - engine-style tokens: {{step.field}} and {"$ref": "step.field"}
          - "double quotes", 'single quotes', back\slashes, a lone $ sign
          - markdown: `inline code`, **bold**, a [link](https://example.invalid)
          
            an indented block
              a deeper one
          
          Trailing punctuation and unicode: café, emoji ✅, em-dash —
          
    - id: implement
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        model: "claude-haiku-4-5"
        task: |-
          You are in a git worktree of the target repository, on branch feature/hostile-fixture.
  
          First persist the plan you were handed under ===IMPLEMENTATION PLAN=== (the
          shared-context handoff, so a re-run or another session can pick it up — the planning
          agent runs read-only and cannot write it itself):
          1. Write it to plan-feature-hostile-fixture.md in the worktree root.
          2. Call the dapr MCP tool actor_state_set with actorId 'feature-hostile-fixture' and key
             'plan', value the plan text — durable in the state store, inspectable from any
             session via actor_state_get.
          If either persistence step fails (e.g. the dapr MCP is unreachable), do NOT fail the
          run — but you MUST say so explicitly in your final output, so the degradation is
          visible instead of silent.
  
          Then implement the feature described under ===FEATURE SPEC=== below, following the
          plan. Leave the result as uncommitted working-tree changes — do not commit or push.
          If the feature already appears implemented, make no changes and say so.
  
          ===FEATURE SPEC===
          # Hostile-content fixture
          
          This spec deliberately carries every token class that must survive rendering untouched.
          It is the committed proof of the delimiter-coexistence story — if any layer (helm, YAML,
          the JSON wire step) mangles one of these, the golden snapshot diff catches it.
          
          - agent-side shell vars: $AGENT_APP_DIR and ${H_SKILLS_DIR}
          - envsubst-style tokens: ${VARS} and ${NOT_A_REAL_VAR}
          - engine-style tokens: {{step.field}} and {"$ref": "step.field"}
          - "double quotes", 'single quotes', back\slashes, a lone $ sign
          - markdown: `inline code`, **bold**, a [link](https://example.invalid)
          
            an indented block
              a deeper one
          
          Trailing punctuation and unicode: café, emoji ✅, em-dash —
          
  
          ===IMPLEMENTATION PLAN===
          {{plan.output}}
  
  '''
# ---
# name: test_plugin_improvement_golden
  '''
  steps:
    - id: worktree
      activity: create-worktree
      input:
        agentId: "claude-agent"
        branch: "improve/{{params.slug}}"
        sourceRepo: "/workspace/plugins-repo"
    - id: setup
      activity: setup
      input:
        agentId: "claude-agent"
        setup:
          - cmd: "mkdir -p ~/.claude/skills && cp -r $H_SKILLS_DIR/. ~/.claude/skills/"
          - cmd: "cp $AGENT_APP_DIR/steering/h-lab-runtime.md ~/.claude/CLAUDE.md"
    - id: improve
      activity: run-claude
      input:
        cwd: "{{worktree.worktreePath}}"
        task: |-
          You are in a git worktree of the plugin repository (your current directory), on branch
          improve/{{params.slug}}. Trace the current linear plugin
          source under plugins/linear (SKILL.md, references/, scripts/) before editing — the
          installed copy can lag the source. Apply the improvement under ===FEEDBACK=== below:
          make a focused change to the plugin source and bump the version in
          plugins/linear/.tessl-plugin/plugin.json. Do not commit or push. Summarize what you
          changed.
  
          ===FEEDBACK===
          {{params.feedback}}
  
  '''
# ---
